Json path (#125)
* Add json-java21-jsonpath module implementing JsonPath query engine
Implements JsonPath query language for the java.util.json backport based on
Stefan Goessner's specification (https://goessner.net/articles/JsonPath/).
Features:
- Parses JsonPath expressions to AST (sealed interface + records)
- Evaluates AST against JsonValue documents from core library
- No external dependencies (java.base only)
- Java 21 functional style (immutable records, pattern matching)
- Pure TDD development with 76 comprehensive tests

Supported operators:
- Root ($), property access (.name, ['name'])
- Array index ([n], [-1]), slice ([:2], [0:10:2])
- Wildcard ([*], .*), recursive descent (..)
- Union ([0,1], ['a','b'])
- Filter expressions ([?(@.isbn)], [?(@.price<10)])
- Script expressions ([(@.length-1)])

All examples from Goessner article implemented as tests.

To verify:
  mvn test -pl json-java21-jsonpath -Djava.util.logging.ConsoleHandler.level=INFO
* Add fluent API: JsonPath.parse(...).select(...)
Adds alternative API style for JsonPath queries:
- JsonPath.parse(expr) returns a compiled JsonPath
- .select(json) evaluates against a document
- Compiled paths are reusable across multiple documents
- Retains original JsonPath.query(expr, json) as convenience method
Tests verify:
- parse(...).select(...) returns same results as query(...)
- Compiled paths can be reused on different documents
- expression() accessor returns original path string

To verify: mvn test -pl json-java21-jsonpath
* Issue #126 Simplify JsonPath docs and use mvnw

Promote json-java21-jsonpath docs to README.md and keep it focused on public usage (Goessner spec + basic examples). Update human READMEs to use ./mvnw (with -am when selecting modules) and add a top-level JsonPath pointer.\n\nVerify: ./mvnw test -pl json-java21-jsonpath -am -Djava.util.logging.ConsoleHandler.level=INFO

* Issue #127 JsonPath logical filters and parse error tests

Extend filter parsing to support !, &&, || (with pare